{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1168,
  "lineage": "d041f0fa-389f-094b-02a8-b9dc7a7422fb",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_private_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0027eed75be6f3bf4",
            "arn": "arn:aws:ec2:us-west-1:631952423493:instance/i-05bcbc30b5e330806",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bcbc30b5e330806",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002b15a5107d26fa2",
            "private_dns": "ip-10-124-1-154.us-west-1.compute.internal",
            "private_ip": "10.124.1.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-023ba5b5f3383890b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec949f68de2e3bf3",
            "tags": {
              "Name": "tf_priv_server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecafc62ad9a39dfc"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.tf_private_sg",
            "module.networking.aws_subnet.tf_private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0027eed75be6f3bf4",
            "arn": "arn:aws:ec2:us-west-1:631952423493:instance/i-050122d5f776fc1bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050122d5f776fc1bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0dda5751d5f4d5a",
            "private_dns": "ip-10-124-2-104.us-west-1.compute.internal",
            "private_ip": "10.124.2.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0919369a074a739ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a05eff778084fcd",
            "tags": {
              "Name": "tf_priv_server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecafc62ad9a39dfc"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_security_group.tf_private_sg",
            "module.networking.aws_subnet.tf_private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0027eed75be6f3bf4",
            "arn": "arn:aws:ec2:us-west-1:631952423493:instance/i-08b4836c58f854282",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b4836c58f854282",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05141f2b7f265eefe",
            "private_dns": "ip-10-123-1-23.us-west-1.compute.internal",
            "private_ip": "10.123.1.23",
            "public_dns": "ec2-54-193-71-83.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.71.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02a0324830d29d209",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c7b93f621459bd3",
            "tags": {
              "Name": "tf_server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-030aa2d2f0f2078e8"
            ]
          },
          "dependencies": [
            "module.compute.aws_elasticache_cluster.tf_redis",
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_elasticache_subnet_group.tf_redis_subnet",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0027eed75be6f3bf4",
            "arn": "arn:aws:ec2:us-west-1:631952423493:instance/i-037b23a69402a20d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037b23a69402a20d6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ecaf5e3b40aca61",
            "private_dns": "ip-10-123-2-252.us-west-1.compute.internal",
            "private_ip": "10.123.2.252",
            "public_dns": "ec2-54-193-104-150.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.104.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-087a9cd34f305767d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05da1b8c5ece58e48",
            "tags": {
              "Name": "tf_server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-030aa2d2f0f2078e8"
            ]
          },
          "dependencies": [
            "module.compute.aws_elasticache_cluster.tf_redis",
            "module.compute.aws_key_pair.tf_auth",
            "module.networking.aws_elasticache_subnet_group.tf_redis_subnet",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cc21b336249666a0",
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:loadbalancer/app/main-lb-tf/a0640ac1e8acf205",
            "arn_suffix": "app/main-lb-tf/a0640ac1e8acf205",
            "dns_name": "main-lb-tf-1725243750.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:631952423493:loadbalancer/app/main-lb-tf/a0640ac1e8acf205",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb-tf",
            "security_groups": [
              "sg-030aa2d2f0f2078e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c7b93f621459bd3"
              },
              {
                "subnet_id": "subnet-05da1b8c5ece58e48"
              }
            ],
            "subnets": [
              "subnet-03c7b93f621459bd3",
              "subnet-05da1b8c5ece58e48"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-001915277b7dedd04",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:listener/app/main-lb-tf/a0640ac1e8acf205/724b51914a3411c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:631952423493:listener/app/main-lb-tf/a0640ac1e8acf205/724b51914a3411c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:loadbalancer/app/main-lb-tf/a0640ac1e8acf205",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.compute.aws_lb.tf_load_balancer",
            "module.compute.aws_lb_target_group.tf_target_group",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa",
            "arn_suffix": "targetgroup/tf-lb-tg/c36a1daad11092aa",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tf_target_registers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa-20200418025720610800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa",
            "target_id": "i-08b4836c58f854282"
          },
          "dependencies": [
            "module.compute.aws_elasticache_cluster.tf_redis",
            "module.compute.aws_instance.tf_server",
            "module.compute.aws_key_pair.tf_auth",
            "module.compute.aws_lb_target_group.tf_target_group",
            "module.networking.aws_elasticache_subnet_group.tf_redis_subnet",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa-20200418025720637800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:631952423493:targetgroup/tf-lb-tg/c36a1daad11092aa",
            "target_id": "i-037b23a69402a20d6"
          },
          "dependencies": [
            "module.compute.aws_elasticache_cluster.tf_redis",
            "module.compute.aws_instance.tf_server",
            "module.compute.aws_key_pair.tf_auth",
            "module.compute.aws_lb_target_group.tf_target_group",
            "module.networking.aws_elasticache_subnet_group.tf_redis_subnet",
            "module.networking.aws_security_group.tf_public_sg",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05ce13b5743e1f79a",
            "owner_id": "631952423493",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc21b336249666a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public"
            },
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d8d2f2f2445b8a4",
            "route_table_id": "rtb-05ce13b5743e1f79a",
            "subnet_id": "subnet-03c7b93f621459bd3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_route_table.tf_public_rt",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09514276a39b8f8c7",
            "route_table_id": "rtb-05ce13b5743e1f79a",
            "subnet_id": "subnet-05da1b8c5ece58e48"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.tf_internet_gateway",
            "module.networking.aws_route_table.tf_public_rt",
            "module.networking.aws_subnet.tf_public_subnet",
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:security-group/sg-0ecafc62ad9a39dfc",
            "description": "Used for access to the private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecafc62ad9a39dfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf_sg",
            "name_prefix": null,
            "owner_id": "631952423493",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06eacdc938353fb24"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:security-group/sg-030aa2d2f0f2078e8",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030aa2d2f0f2078e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": null,
            "owner_id": "631952423493",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:subnet/subnet-0ec949f68de2e3bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.124.1.0/24",
            "id": "subnet-0ec949f68de2e3bf3",
            "map_public_ip_on_launch": true,
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_private_1"
            },
            "vpc_id": "vpc-06eacdc938353fb24"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_private_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:subnet/subnet-09a05eff778084fcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.124.2.0/24",
            "id": "subnet-09a05eff778084fcd",
            "map_public_ip_on_launch": true,
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_private_2"
            },
            "vpc_id": "vpc-06eacdc938353fb24"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:subnet/subnet-03c7b93f621459bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-03c7b93f621459bd3",
            "map_public_ip_on_launch": true,
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_public_1"
            },
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:subnet/subnet-05da1b8c5ece58e48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-05da1b8c5ece58e48",
            "map_public_ip_on_launch": true,
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_public_2"
            },
            "vpc_id": "vpc-001915277b7dedd04"
          },
          "dependencies": [
            "module.networking.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_private_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:vpc/vpc-06eacdc938353fb24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.124.0.0/16",
            "default_network_acl_id": "acl-0c327bbd9314935ae",
            "default_route_table_id": "rtb-074cc551a892199a6",
            "default_security_group_id": "sg-02eb0ba270a93bba4",
            "dhcp_options_id": "dopt-08cd25efceecaa708",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-06eacdc938353fb24",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-074cc551a892199a6",
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_private_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:631952423493:vpc/vpc-001915277b7dedd04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-088d112d04a34add2",
            "default_route_table_id": "rtb-0deffe6da59dfe167",
            "default_security_group_id": "sg-0e5f40b1cf1e0199d",
            "dhcp_options_id": "dopt-08cd25efceecaa708",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001915277b7dedd04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0deffe6da59dfe167",
            "owner_id": "631952423493",
            "tags": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}